<resources>
    //URL
        <string name="URL">http://10.0.0.205:</string>
    <!--    <string name="PORT">4005/</string>-->
    <!--    <string name="URL">http://18.139.84.245:</string>-->
    <string name="WACURL">https://www.wacinfotech.com/</string>
    <string name="PORT">4002/</string>
    <string name="addInvoiceURL">addInvoice/</string>
    <string name="regismemberURL">regisMember/</string>
    <string name="addtravelURL">addTravel/</string>
    <string name="addbusinessURL">addBusiness/</string>
    <string name="addserviceURL">addService/</string>
    <string name="addassetURL">addAsset/</string>
    <string name="finddatameteruserURL">FindDataMeterForUser/</string>
    <string name="loginURL">loginAd/</string>
    <string name="Payment">payment/</string>
    <string name="GPSUpdate">gpsUpdate/</string>
    <string name="Allinvoice">allinvoice/</string>
    <string name="Category">android_get.php/</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBcIn55CCQIVSZHS06m4rjZhEhk1qS3S7M</string>

    <string name="NOPAPER">3</string>
    <string name="LOWBATTERY">4</string>
    <string name="PRINTVERSION">5</string>
    <string name="PRINTBARCODE">6</string>
    <string name="PRINTQRCODE">7</string>
    <string name="PRINTPAPERWALK">8</string>
    <string name="PRINTCONTENT">9</string>
    <string name="CANCELPROMPT">10</string>
    <string name="PRINTERR">11</string>
    <string name="OVERHEAT">12</string>
    <string name="MAKER">13</string>
    <string name="PRINTPICTURE">14</string>
    <string name="NOBLACKBLOCK">15</string>
    <string name="wordFont">0</string>

    <string name="GPS_LOCATION_REQUEST">100</string>
    <string name="ADDRESS_PICKER_REQUEST">1020</string>


    <string name="app_name">Utility Admin manage</string>
    <string name="register">ลงทะเบียน</string>
    <string name="savevalues">จดมาตร</string>
    <string name="headersavevalues">การจดเลขมาตร</string>
    <string name="homeid">เลขที่บ้าน</string>
    <string name="homegps">GPS</string>
    <string name="valuesid">เลขมาตร</string>
    <string name="printinvoices">พิมพ์ใบแจ้งหนี้</string>
    <string name="printslip">พิมพ์ใบเสร็จ</string>
    <string name="headerregister">ลงทะเบียนผู้ใช้น้ำ</string>
    <string name="meterid">เลขมิเตอร์</string>
    <string name="typepay">ประเภทค่าบริการ</string>
    <string name="save">บันทึก</string>
    <string name="cancel">ยกเลิก</string>
    <string name="success">Success</string>
    <string name="noPaper">No paper</string>
    <string name="noPaperNotice">No paper, please put paper in and retry</string>
    <string name="sure">sure</string>
    <string name="operation_result">Result</string>
    <string name="LowBattery">Low battery, please connect the charger!</string>
    <string name="dialog_comfirm">confirm</string>
    <string name="overTemp">over temp!</string>
    <string name="headerpaymentwater">ชำระค่าน้ำประปา</string>
    <string name="headerpayment">ชำระค่าบริการ</string>
    <string name="invoice">ค่าชำระ</string>
    <string name="gettexterror">จำเป็นต้องกรอก</string>
    <string name="gettexthint">กรอกเลขที่บ้านหรือเลขมาตร</string>


    <string name="fileuploadSuccess">Upload success</string>
    <string name="submit">ตกลง</string>
    <string name="type">ประเภท</string>
    <string name="amount">จำนวนเงิน</string>
    <string name="oldwatermeter">เลขมาตรครั้งก่อน</string>
    <string name="newwatermeter">เลขมาตรครั้งนี้</string>
    <string name="telnum">เบอร์โทร</string>
    <string name="buildingtype">ประเภทสิ่งปลูกสร้าง</string>
    <string name="name">ชื่อผู้ใช้</string>
    <string name="other">อื่นๆ</string>
    <string name="savedata">การบันทึกข้อมูล</string>
    <string name="typesavedata">หัวข้อการบันทึกข้อมูล</string>
    <string name="Selectdata">เลือกหัวข้อ</string>
    <string name="detail">รายละเอียด</string>
    <string name="Startdateinvoice">วันที่แจ้ง</string>
    <string name="Enddateinvoice">วันครบชำระ</string>
    <string name="travel">ท่องเที่ยว</string>
    <string name="service">บริการ</string>
    <string name="business">ธุรกิจ</string>
    <string name="estate">ทรัพย์สิน</string>
    <string name="findwateruser">ค้นหาผู้ใช้น้ำ</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="Inputref_2">ระบุ Ref.2</string>
    <string name="headerscan">แสกน</string>
    <string name="ref_2">Ref.2</string>
    <string name="SelectdateAlert">เลือกวันครบชำระ</string>
    <string name="Userinfo">ข้อมูลผู้ใช้</string>
    <string name="next">ต่อไป</string>

    //Preference
    <string name="PrefsLogin">UtilityLoginPref</string>
    <string name="Status_login">StatusLogin</string>
    <string name="Admin_name">Admin name</string>
    <string name="Admin_username">Admin username</string>
    <string name="Admin_password">Admin password</string>
    <string name="Admin_telnum">Admin telnum</string>
    <string name="Admin_email">Admin email</string>
    <string name="Admin_id">Admin id</string>
    <string name="logout">Log out</string>
    <string name="CategorySet">CategorySet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">จ่ายเงิน</string>
    <string name="addinvoice">แจ้งหนี้</string>
    <string name="submitandnext">บันทึกและดำเนินการต่อ</string>
    <string name="LogError">Main_Error_Catch</string>
    <string name="headerupdateuser">อัพเดทข้อมูลผู้ใช้</string>
    <string name="location_picker_select_location_button_cancel">cancle</string>
    <string name="location_picker_select_location_button_select">select location</string>
    <string name="location_picker_place_name_result">location picker place name result</string>
    <string name="location_picker_dropped_marker_snippet_no_results">location picker dropped marker snippet no results</string>
    <string name="user_location_permission_not_granted">user_location_permission_not_granted</string>
    <string name="access_token">sk.eyJ1IjoicGFya3Bob29tIiwiYSI6ImNrOXo0MDA5bjBxc3YzcXFkaHZyeXlnb2wifQ.CorxHmAtzXaz6F35pTEYww</string>
    <string name="move_map_instruction">move map instruction</string>
    <string name="user_location_permission_explanation">user location permission explanation</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="search_hint">Search</string>
    <string name="searchallinvoice">ค้นหาใบแจ้งหนี้</string>
    <string name="paid">ชำระแล้ว</string>
    <string name="unpaid">ค้างชำระ</string>
    <string name="price">จำนวนเงิน</string>
    <string name="min">ต่ำสุด</string>
    <string name="max">สูงสุด</string>
    <string name="NoInvoice">ไม่มีรายการแจ้งหนี้</string>

</resources>
